<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="app_name">nTasks</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="loginTwitter">Log In with Twitter</string>
    <string name="loginFacebook">Log In with Facebook</string>
    <string name="register">Register</string>
    <string name="menu_save">Save</string>
    <string name="menu_search">Search</string>
    <string name="menu_logout">Logout</string>
    <string name="email">Email address</string>
    <string name="search_hint">Search tasks</string>
    <string name="search_description">Tasks</string>
    <string name="project_icon">Project icon</string>
    <string name="no_projects">Congratulations, you have nothing to do!</string>
    <string name="add_project">New project</string>
    <string name="add_task">New task</string>
    <string name="add_task_name">Task name</string>
    <string name="add_note_text">Note text</string>
    <string name="project_name">Project name</string>
    <string name="project_description">Project description</string>
    <string name="project_client">Client</string>
    <string name="refresh">Sync</string>
    <string name="periodic_sync">Sync Automatically</string>
    <string name="login_ntasks">Log in with nTasks</string>
    <string name="login_ntasks_summary">Log in with username and password</string>
    <string name="no_network_title">Using nTasks without a network connection.</string>
    <string name="no_network_message">You can still edit your tasks and track time, but the changes will only be saved 
        once you are connected to the internet. </string>
    <string name="project_category">Category</string>
    <string name="settings">Settings</string>
    <string name="note_add">Add Note</string>
    
    <string name="task_start">Start</string>
    <string name="task_stop">Stop</string>
    
    <string name="permission_write">Edit Projects and Tasks</string>
    <string name="permission_write_description">Allows the application to modify all nTasks data</string>
    <string name="notification_sync_text">Synchronizing data with server&#8230;</string>
    <string name="loading">Loading&#8230;</string>
    
    <string-array name="task_status_array">
        <item>Urgent</item>
        <item>To-Do</item>
        <item>In Progress</item>
        <item>Done</item>
    </string-array>
    <string-array name="task_actions">
        <item>Rename</item>
        <item>Add Note</item>
        <item>Delete</item>
    </string-array>
    <string-array name="project_actions">
        <item>Edit</item>
        <item>Change Icon</item>"
        <item>Delete</item>
    </string-array>
    <string-array name="project_categories">
        <item>Work</item>
        <item>School</item>
        <item>Hobby</item>
        <item>Sport</item>
        <item>Other</item>
    </string-array>
    <string-array name="icon_sources">
        <item>From Camera</item>
        <item>From Gallery</item>
    </string-array>
</resources>
