<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/menu_refresh"
          android:title="@string/refresh"
          android:showAsAction="never" />
    
    <item android:id="@+id/menu_add_project"
          android:icon="@drawable/ic_menu_project_add"
          android:title="@string/add_project"
          android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/menu_settings"
        android:title="@string/settings"
       android:icon="@android:drawable/ic_menu_preferences"
       android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/menu_statistics"
        android:title="Statictics"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_logout"
          android:title="@string/menu_logout"
          android:showAsAction="never" />
          
</menu>