<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username" >
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_below="@id/loginUsername" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" 
            android:layout_below="@id/loginPassword" />
        
        <TextView
            android:id="@+id/loginMessageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone"
            android:layout_above="@id/loginUsername" />
        
        <Button 
            android:id="@+id/loginTwitterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginButton"
            android:text="@string/loginTwitter" />   
                 
        <Button 
            android:id="@+id/loginFacebookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginButton"
            android:layout_toRightOf="@id/loginTwitterButton"
            android:text="@string/loginFacebook" />    

</RelativeLayout>